# Vanilla-Conquer

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  mingw.yml  windows.yml
common/: CMakeLists.txt  file.cpp  file.h  file_posix.cpp  file_win.cpp  memflag.h  misc.h  modemreg.h  playcd.h  rawfile.cpp  sharedoptions.cpp  sharedoptions.h  soundio_openal.cpp  video_sdl2.cpp  vqaaudio_openal.cpp  wincomm.h  wwmouse.cpp  wwmouse.h
redalert/: CMakeLists.txt  aircraft.cpp  anim.cpp  building.cpp  bullet.h  ccdde.cpp  cell.cpp  connect.cpp  conquer.cpp  coord.cpp  dde.h  dllinterface.cpp  event.cpp  expand.cpp  externs.h  fixed.h  ftimer.h  function.h  goptions.cpp  gscreen.cpp  house.cpp  house.h  infantry.cpp  int.h  list.h  menus.cpp  miscasm.cpp  netdlg.cpp  nulldlg.cpp  options.cpp  options.h  pk.h  ramfile.cpp  rand.cpp  scenario.cpp  sidebarglyphx.cpp  stats.cpp  taction.cpp  udpaddr.cpp  unit.cpp  (+11 more)
redalert/win32lib/: _diptabl.cpp  ddraw.cpp  drawmisc.cpp  font.cpp  gbuffer.h  keyboard.h  palette.cpp  palette.h  playcd.h  shape.h  timer.cpp  timerdwn.cpp  timerini.cpp  windows.cpp  ww_win.h  wwlib32.h  wwmem.h
tiberiandawn/: ccfile.cpp  cdfile.cpp  cdfile.h  cell.cpp  conquer.cpp  defines.h  dialog.cpp  display.cpp  ending.cpp  expand.cpp  externs.h  function.h  gadget.cpp  globals.cpp  goptions.cpp  gscreen.cpp  heap.cpp  house.cpp  iconset.cpp  init.cpp  intro.cpp  keyframe.cpp  loaddlg.cpp  map.cpp  mapsel.cpp  menus.cpp  miscasm.cpp  miscasm.h  mixfile.cpp  monoc.cpp  morphpal.cpp  mplayer.cpp  netdlg.cpp  nullconn.cpp  options.cpp  options.h  queue.cpp  radar.cpp  scenario.cpp  score.cpp  (+7 more)
tiberiandawn/win32lib/: gbuffer.h
